--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Simple Quiz</title>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         <div id="quiz-container">
@@ -20,5 +20,5 @@
             <p id="feedback"></p>
         </div>
         <script src="quiz.js"></script>
-    </body>
+</body>
 </html>
